<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageTree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/tree"
        android:paddingTop="30dp"
        android:src="@drawable/tree" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="22dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioMin"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:checked="true"
            android:text="@string/radioMed"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioMax"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageDownArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:contentDescription="@string/downArrow"
        android:onClick="plantTrees"
        android:src="@drawable/rough_down_arrow128" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/share"
        android:onClick="share"
        android:src="@android:drawable/ic_menu_share" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="bottom"
        android:layout_weight="1.0"
        android:gravity="bottom" >

        <TableRow
            android:id="@+id/rowTrees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textPlantedTrees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Planted_Trees"
                android:textColor="@color/green"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/counterTrees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="right"
                android:text="@string/counter"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/rowArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textReforestedArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Reforested_Area"
                android:textColor="@color/green"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/counterArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="right"
                android:text="@string/counter"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/rowCarbon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textCapturedCO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Captured_CO2"
                android:textColor="@color/green"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/counterCO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="right"
                android:text="@string/counter"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>